modules/015-admission-policy-engine/charts/constraint-templates/templates/security/allowed-ingresses.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8allowedingresses
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: security-policy
  annotations:
    metadata.gatekeeper.sh/title: "The allowed ingress"
    metadata.gatekeeper.sh/version: 1.1.0
    description: >-
      Controls that the ingress satisfies the following conditions: 
        - Does not contain `*` in the hosts field 
spec:
  crd:
    spec:
      names:
        kind: D8AllowedIngresses
      validation:
        openAPIV3Schema:
          type: object
          description: >-
            Controls the allowed configuration for the Ingress. 
          properties:
            blockWildcardDomains:
              type: boolean
              description: "Block creation of ingress objects with `*` in DNS domains."

  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            libs:
              - |
                {{- include "constraint-templates.lib.common.container-review" . | nindent 16 }}
              - |
                {{- include "constraint-templates.lib.str" . | nindent 16 }}
            rego: |
              package d8.security_policies

              import data.lib.str.has_wildcard

              violation contains {"msg": msg, "details": {}} if {
                not input.review.operation == "DELETE"
                object.get(input.parameters, "blockWildcardDomains", true)
                ingress_name := input.review.object.metadata.name
                some i
                host := input.review.object.spec.rules[i].host
                host != ""
                has_wildcard(host)
                msg := sprintf("Ingress '%s' contains a wildcard '*' in host '%s', which is not allowed.", [ingress_name, host])
              }
