modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-ingresses/constraint_security_policy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8AllowedIngresses
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
    namespaceSelector:
      matchLabels:
        enforce: deny-all
  parameters:
    blockWildcardDomains: false
