modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-ingresses/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-ingresses
tests:
- name: pss-deny-all
  template: ../../templates/security/allowed-ingresses.yaml
  constraint: constraint_pss_deny_all.yaml
  cases:
  - name: 001-allowed-no-wildcard
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_deny_all/001-allowed-no-wildcard.yaml
    assertions:
    - violations: 'no'
  - name: 003-disallowed-wildcard-in-host
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_deny_all/003-disallowed-wildcard-in-host.yaml
    assertions:
    - violations: 'yes'
  - name: 004-disallowed-wildcard-only
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_deny_all/004-disallowed-wildcard-only.yaml
    assertions:
    - violations: 'yes'
  - name: 002-disallowed-multiple-rules-one-wildcard
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_deny_all/002-disallowed-multiple-rules-one-wildcard.yaml
    assertions:
    - violations: 'yes'
- name: security-policy
  template: ../../templates/security/allowed-ingresses.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 006-allowed-wildcard-when-disabled
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/006-allowed-wildcard-when-disabled.yaml
    assertions:
    - violations: 'yes'
  - name: 005-allowed-no-wildcard-when-disabled
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/005-allowed-no-wildcard-when-disabled.yaml
    assertions:
    - violations: 'no'
